--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-	"dependencies": {},
 	"devDependencies": {
 		"@types/lodash": "^4.17.13",
 		"@vitest/coverage-v8": "2.1.8",
@@ -20,8 +19,7 @@
 	"scripts": {
 		"build": "rm -rf dist && yarn lint && tsc -p tsconfig.json",
 		"lint": "prettier --write . && tsc -p tsconfig.json",
-		"npm-publish": "yarn test --run && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
-		"npm-publish-only": "yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
+		"npm:publish": "yarn test --run && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
 		"test": "vitest",
 		"test:coverage": "rm -rf coverage && vitest --run --coverage"
 	},
