--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"@vitest/coverage-v8": "2.1.8",
 		"prettier": "^3.4.2",
 		"typescript": "^5.7.2",
-		"vitest": "^2.1.8"
+		"vitest": "^3.2.4"
 	},
 	"files": [
 		"dist"
@@ -20,8 +20,9 @@
 		"build": "rm -rf dist && yarn lint && tsc -p tsconfig.json",
 		"lint": "prettier --write . && tsc -p tsconfig.json",
 		"npm:publish": "yarn test --run && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
-		"test": "vitest",
-		"test:coverage": "rm -rf coverage && vitest --run --coverage"
+		"test": "vitest --run",
+		"test:coverage": "rm -rf coverage && vitest --run --coverage",
+		"test:watch": "vitest"
 	},
 	"version": "1.0.1"
 }
